--- a/CRM_Server_(TCP_connection)/CRM_Server_(TCP_connection).csproj
+++ b/CRM_Server_(TCP_connection)/CRM_Server_(TCP_connection).csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Employee.cs" />
+    <Compile Include="FileReadAndWriteHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInterface.cs" />
