--- a/CRM_Server_(TCP_connection)/CRM_Server_(TCP_connection).csproj
+++ b/CRM_Server_(TCP_connection)/CRM_Server_(TCP_connection).csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientObject.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="FileReadAndWriteHandler.cs" />
+    <Compile Include="MenuNavigation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerObject.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="WorkDay.cs" />
   </ItemGroup>
